--- a/src/style.css
+++ b/src/style.css
@@ -14,12 +14,13 @@ body {
     #ffcaca,
     #ffd6d6
   );
+  margin-top: 50px;
 }
-#rain img {
-  max-width: 180px;
+#weatherIcon {
+  max-width: 200px;
   height: auto;
-  margin-top: 30px;
-  margin-left: 10px;
+  margin-top: 90px;
+  margin-left: 40px;
 }
 h1 {
   font-size: 40px;
