--- a/src/style.css
+++ b/src/style.css
@@ -47,10 +47,31 @@ ul {
   border: 1px solid rgba(255, 255, 255, 0.3);
   padding: 20px;
   margin-left: 50px;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 #else {
   margin: 30px;
   padding: 10px;
   padding-left: 35px;
+}
+#citySearch {
+  margin-top: 20px;
+  margin-left: 10px;
+  background: rgba(255, 255, 255, 0.09);
+  border-radius: 5px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.183);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  padding-left: 5px;
+  padding-top: 5px;
+}
+#searchButton {
+  margin-top: 22px;
+  margin-left: 10px;
+  background: rgba(255, 255, 255, 0.09);
+  border-radius: 5px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.183);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  position: relative;
+  right: 50px;
+  backdrop-filter: blur(30px);
 }
