--- a/src/style.css
+++ b/src/style.css
@@ -104,7 +104,7 @@ ul {
 }
 .forecastTemperature {
   font-size: 17px;
-  text-align: right;
+  text-align: center;
 }
 .forecastTempMin,
 .forecastDay {
